--- a/views/books/books-list.hbs
+++ b/views/books/books-list.hbs
@@ -1,12 +1,18 @@
 <h1>list of books in the DB</h1>
 
+<form>
+  <label for="min-rating">Minimum rating</label><br>
+  <input type="number" id="min-rating" name="min-rating"><br>
+  <button>Filter</button>
+</form>
+
     {{#each booksArr}}
     <section class="book-summary">
         <h2>{{this.title}}</h2>
         <p>
             Author: {{this.author}} <br />
             Rating: {{this.rating}} <br />
-            <a href="">More details</a>
+            <a href="/books/{{this.id}}">More details</a>
         </p>
 
     </section>
