--- a/views/books/books-list.hbs
+++ b/views/books/books-list.hbs
@@ -13,7 +13,10 @@
             Author: {{this.author}} <br />
             Rating: {{this.rating}} <br />
             <a href="/books/{{this.id}}">More details</a>
-        </p>
-
+            <a href="/books/{{this.id}}/edit">Edit</a>
+            </p>
+            <form action="/books/{{this.id}}/delete" method="POST">
+                <button>Delete</button>
+            </form>
     </section>
 {{/each}}
